@@ -1,5 +1,7 @@
 DIST guitarix2-0.32.1.tar.bz2 20654862 SHA256 73c4d040b2fad2eb474c4b52ce5026d0fb95f11f1c1fdc07848c0349836287ea SHA512 a59e4ee73418000e728de327fb393c3193badaa086849715592ce085d0d83d1beff490c9eb9a0638554401b70b671c33167f3581fb0ddfba3463b532c68e3a32 WHIRLPOOL 82eccc64fc8dadb02d18382cd2c1978ae4f93401d32efb338c58dd627e360042f53b1659700b07b4c1f858981dff15928ff7577c9712269063a592a5ab8a36cd
+DIST guitarix2-0.32.3.tar.bz2 20759487 SHA256 2e822d836d2455eab523304b6ec952bfb6ef8c0bf44b952046d64877a62c6cf9 SHA512 994d9db9a1ebecfd89f7d1742a1f1bb29fe9e0bf73f0afb5b45d5d1b4192cc0cae0dcee4bb5a97ba3a6211d3602e432aa0804105a4840d1121109f491dd10750 WHIRLPOOL 24774413e57e5676450fb5ae1519af6aa835fa4db034d30faba0e06015b9584c6acf607273bb712a312e86eae24063c5eb22ff20ef2db55caf4f9642a4d71b1e
 EBUILD guitarix2-0.32.1.ebuild 1874 SHA256 3ebc0e28fd435dd8d9fe1336798ec534fe34e49b97cb92568bd68633daa6254b SHA512 827f02bd68dbf88981a4047ec6f51201452b06037d2e6851d0c2125177065f035673ef821ea7f029d7b313b35cd87d5502865c987242aab6b08edb5b3874cdba WHIRLPOOL b911b8fb53c3a8391c0d3f5773c064171c44051a6f9271b67733da03beb3c0d622a2802e5988558e99752630533d2ed454ced2e6a3ee734a1698408d0cd217e0
+EBUILD guitarix2-0.32.3.ebuild 1955 SHA256 70391d0f4667d077b48beef9b8fd2cf2a7ab6b6a3f323e897a67cc75a79f287e SHA512 6380d46e937f421f95c82fb03664b1af8016f8155f9c55c404fa8fc5c2980d484a258c8b17fea2c9605bd46ed8828f99d3a749b04da2b8a2a7baf6eda22ddf35 WHIRLPOOL 7fb3842ac4e1d725b3f4233ca05257f82311eb7c4730c8a25aba072edc8494d23a4fe094cd438363cb4e7b5ccc5b7d4b5622f59137ac002b0eb865a589ed7d26
 EBUILD guitarix2-9999.ebuild 1874 SHA256 3ebc0e28fd435dd8d9fe1336798ec534fe34e49b97cb92568bd68633daa6254b SHA512 827f02bd68dbf88981a4047ec6f51201452b06037d2e6851d0c2125177065f035673ef821ea7f029d7b313b35cd87d5502865c987242aab6b08edb5b3874cdba WHIRLPOOL b911b8fb53c3a8391c0d3f5773c064171c44051a6f9271b67733da03beb3c0d622a2802e5988558e99752630533d2ed454ced2e6a3ee734a1698408d0cd217e0
-MISC ChangeLog 5535 SHA256 cb15de507c3102bcd8e4e8b6a8107ef0d2fdbe6d34a3d5392d67e1b4b673867a SHA512 fe41cc7a60220168039ebf6a633816f91eca439f19b8ac106371ac85811713c3ea7e9d80734a946c9dd997e0d344ed1ab333df3626b81f48265e4a5e99e77ccf WHIRLPOOL 7b8b2614456440ceea97dca47b33364d31979d0c6af596c540a38c86b1ca02ac6a641fcb4e0a7fb1c944cb4bedc7aa6fda29a7a3473467616b8c36f8486402c0
+MISC ChangeLog 5732 SHA256 bd36b23ca68c3455ad2063aef9b9e366edcbf0d93a38079ebd6dfdde3417100b SHA512 7a45cce58cd891ed13d4eb95b38d2eace310402eaa53e37a655b9e19475a2b25708e00ca99175cefb1d3e35a1e5342b23cfa3a2272acd5bf7ce809aece3f93f6 WHIRLPOOL be33d4e613504aa644a0a30d7514881ac7abb2754e20ca41bfb4ce667719c1f4e93809ae3ef358df36cc28b7a89baeb883881f1eb8dc2a248bece61f33b72b97
 MISC metadata.xml 490 SHA256 e552a52320b293125db155710e5eee09a245ac42b37675e99f915c647b08170d SHA512 14166323e56d906e55739045a8e4bdfa76283f80b61bc6af6577491bf04843d6283a384b73a5152652b47920aa5ca10b1f78731850996ae7f9bcc06aa423df15 WHIRLPOOL 83ccb45a1601e418132d0066711dd910c42a2c1f0bc6b01d993e365ed960e88db226b2eb101523535e4e76be0a2c52c9f155415261d5a1cb7f5716e15412022b
