@@ -1,6 +1,13 @@
 # ChangeLog for media-sound/guitarix2
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*guitarix2-0.32.3 (03 Feb 2015)
+
+  03 Feb 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  +guitarix2-0.32.3.ebuild:
+  version bump
+  fix python-r1 related warnings from waf-utils eclass
 
 *guitarix2-0.32.1 (11 Dec 2014)
 
